# lima-sites

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  configure_webhook.py  dev.db  docker-compose.yml  entrypoint.sh  pyproject.toml  schemas.py  settings.py  webhook_dev.py
docs/: README.md  database.md  installation.md  telegram-setup.md  whatsapp-setup.md
docs/features/: annotations.md
lima/: __init__.py  app.py  cache.py  database.py  models.py  scheduler.py  schemas.py  security.py  settings.py
lima/bot/: __init__.py  api_client.py  config.py  formatters.py  keyboards.py  main.py
lima/bot/formatters/: __init__.py  anotacao.py  anotacao_display.py  base.py  endereco.py  sugestao.py
lima/bot/handlers/: __init__.py  anotacao.py  busca.py  busca_codigo.py  callback.py  endereco_visualizacao.py  explorar_base.py  menu.py  start.py  sugestao.py
lima/bot/persistence/: __init__.py  api_persistence.py  api_persistence_client.py
lima/bot/services/: __init__.py  anotacao.py  auth.py  endereco.py  resultado_paginacao.py  sugestao.py  token_service.py  usuario.py
lima/bot/shared/: __init__.py  types.py
lima/core/: loading_options.py
lima/routers/: __init__.py  alteracoes.py  anotacoes.py  auth.py  bot_conversations.py  buscas.py  enderecos.py  sugestoes.py  usuarios.py  usuarios_admin.py
lima/routers/enderecos/: __init__.py  auditoria.py  auxiliares.py  basic.py  busca.py  estatisticas.py  listagem.py  utils.py
lima/routers/enderecos/admin/: __init__.py  auditoria.py  basic.py
lima/routers/enderecos/busca/: __init__.py  auxiliares.py  busca.py  estatisticas.py  listagem.py
lima/services/: __init__.py  ai_service.py  message_commands_base.py  whatsapp.py  whatsapp_commands.py
lima/services/telegram/: __init__.py  commands.py  core.py  registro.py
lima/utils/: README.md  decorators.py  dependencies.py  permissions.py  resource_validators.py
migrations/: env.py
migrations/versions/: 4ca757d1ca5d_adicionar_indoor_ao_tipoendereco.py  4e8ef15bf966_create_users_table.py  6fe07db02622_adicionar_codigo_endereco_unico.py  8aab00ff3c20_adicionar_sistema_enderecos_.py  8bb1bf92576e_adicionar_usuario_administrador.py  cd422b92930c_adiciona_tabela_anotacoes.py  df3c0477030a_adicionar_novos_tipos_ao_tipoendereco.py  e717d3114b03_adicionar_tipo_busca_listagem.py  f191525e7785_adicionar_restricao_unica_operadora_.py  faf2b0ea3941_adicionar_campo_codigo_endereco.py
tests/: conftest.py
tests/api/: test_autenticacao.py  test_auth.py  test_enderecos.py  test_fluxo_auth_integrado.py  test_rotas_basicas.py  test_usuarios.py
tests/factories/: __init__.py  alteracao_factory.py  anotacao_factory.py  busca_factory.py  busca_log_factory.py  detentora_factory.py  endereco_factory.py  endereco_operadora_factory.py  operadora_factory.py  sugestao_factory.py  usuario_factory.py
tests/integration/: test_anotacoes.py  test_buscas.py
tests/services/: test_ai_service.py
tests/unit/: test_models.py  test_schemas.py
